--- a/spotify/style.scss
+++ b/spotify/style.scss
@@ -1,3 +1,7 @@
+// breakpoints
+$md: 768px;
+$sm: 640px;
+
 .main {
   min-height: 100vh;
   background-color: #121212;
@@ -6,11 +10,12 @@
   justify-content: center;
   font-family: "Poppins", serif;
 
-  .container {
+  .custom-container {
     width: 70rem;
     display: flex;
     flex-direction: column;
     row-gap: 2.1rem;
+    margin: 2.5rem;
 
     .section {
       .header {
@@ -169,17 +174,21 @@
 
           &:hover {
             background-color: #1f1f1f;
-
-            .img-wrapper .play-btn-wrapper {
-              opacity: 1;
-              visibility: visible;
-              transform: translateY(0);
-            }
           }
 
-          &:active {
-            &:not(:has(.play-btn:active)) {
-              background-color: black;
+          @media (width > $sm) {
+            &:hover {
+              .img-wrapper .play-btn-wrapper {
+                opacity: 1;
+                visibility: visible;
+                transform: translateY(0);
+              }
+            }
+
+            &:active {
+              &:not(:has(.play-btn:active)) {
+                background-color: black;
+              }
             }
           }
         }
@@ -188,6 +197,61 @@
       &.artist-section {
         .cards-container .card .img-wrapper .card-img {
           border-radius: 50%;
+        }
+      }
+    }
+  }
+}
+
+@media (width < $md) {
+  .main .custom-container {
+    width: 90%;
+
+    .section .cards-container {
+      grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+      grid-auto-flow: column;
+      grid-auto-columns: minmax(12rem, 1fr);
+      overflow-x: auto;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
+}
+
+@media (width < $sm) {
+  .main .custom-container {
+    width: 100%;
+
+    .section {
+      .header {
+        .hero-text {
+          font-size: 1.2rem;
+        }
+
+        .sub-text {
+          display: none;
+        }
+      }
+
+      .cards-container {
+        grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+        grid-auto-columns: minmax(10rem, 1fr);
+
+        .card {
+          padding: 0.6rem;
+
+          .text {
+            .hero-text {
+              font-size: 0.85rem;
+            }
+
+            .sub-text {
+              font-size: 0.75rem;
+              -webkit-line-clamp: 1;
+            }
+          }
         }
       }
     }
