--- a/landing-page/style.scss
+++ b/landing-page/style.scss
@@ -1,11 +1,14 @@
+/* 
+Design inspired by Designer_Kishan from the Figma community.
+https://www.figma.com/community/file/1178013122154794513/landing-page
+*/
+
 :root {
   --primary-color: #f7efed;
   --secondary-color: #000;
   --tertiary-color: #fff;
 }
 
-$xl: 1280px;
-$lg: 1024px;
 $md: 768px;
 $sm: 640px;
 
@@ -19,18 +22,27 @@ body {
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+.container {
+  padding-inline: max(5.55vw, 1rem);
+}
+
 .main {
   min-height: 100vh;
   background-color: var(--primary-color);
-  padding: 1.6rem 5rem;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 
   .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-block: max(1.8vw, 1rem);
+    position: relative;
+    z-index: 99;
 
     .logo-image {
-      width: 10.2rem;
+      width: max(11.3vw, 5rem);
 
       img {
         width: 100%;
@@ -40,6 +52,8 @@ body {
     .nav-content-wrapper {
       display: contents;
       z-index: 10;
+      position: relative;
+      overflow: hidden;
 
       .nav-items {
         list-style-type: none;
@@ -47,14 +61,14 @@ body {
         align-items: center;
         margin: 0;
         padding: 0;
-        gap: 3rem;
+        gap: max(3.3vw, 1.3rem);
 
         .item a {
           text-decoration: none;
           color: var(--secondary-color);
           text-transform: uppercase;
           font-weight: 550;
-          font-size: 1.1rem;
+          font-size: max(1.23vw, 0.9rem);
           position: relative;
 
           &:before {
@@ -79,14 +93,14 @@ body {
         background-color: var(--secondary-color);
         display: flex;
         border-radius: 10rem;
-        gap: 0.5rem;
-        height: 4.5rem;
-        padding-inline: 2rem;
+        gap: max(0.55vw, 0.4rem);
+        height: max(5vw, 2.9rem);
+        padding-inline: max(2.2vw, 1.2rem);
         outline-offset: 1px;
         outline: 1px dashed transparent;
 
         .icon {
-          width: 2.4rem;
+          width: max(2.65vw, 1.8rem);
           align-self: center;
         }
 
@@ -103,7 +117,7 @@ body {
           border: none;
           background-color: transparent;
           color: var(--tertiary-color);
-          font-size: 1.3rem;
+          font-size: max(1.45vw, 1rem);
 
           &::placeholder {
             color: var(--tertiary-color);
@@ -113,6 +127,15 @@ body {
         &:focus-within {
           outline-color: var(--secondary-color);
         }
+      }
+
+      .nav-product-img {
+        width: max(40vw, 15rem);
+        position: absolute;
+        bottom: -6rem;
+        right: -2rem;
+        transform: rotate(-22deg);
+        display: none;
       }
     }
 
@@ -158,61 +181,6 @@ body {
       transition: all 0.4s;
     }
 
-    @media (width < $xl) {
-      .logo-image {
-        width: 6rem;
-      }
-
-      .nav-content-wrapper {
-        .nav-items {
-          gap: 2rem;
-
-          .item a {
-            font-size: 1rem;
-          }
-        }
-
-        .input {
-          height: 3.5rem;
-          padding-inline: 1.5rem;
-
-          .icon {
-            width: 2rem;
-          }
-
-          input {
-            font-size: 1.2rem;
-          }
-        }
-      }
-    }
-
-    @media (width < $lg) {
-      .nav-content-wrapper {
-        .nav-items {
-          gap: 1.3rem;
-
-          .item a {
-            font-size: 0.9rem;
-          }
-        }
-
-        .input {
-          height: 2.9rem;
-          padding-inline: 1.2rem;
-          gap: 0.4rem;
-
-          .icon {
-            width: 1.8rem;
-          }
-
-          input {
-            font-size: 1rem;
-          }
-        }
-      }
-    }
-
     @media (width < $md) {
       .nav-content-wrapper {
         display: block;
@@ -234,6 +202,10 @@ body {
           width: 75%;
           margin: auto;
           margin-top: 2rem;
+        }
+
+        .nav-product-img {
+          display: block;
         }
       }
 
@@ -266,10 +238,6 @@ body {
     }
 
     @media (width < $sm) {
-      .logo-image {
-        width: 5rem;
-      }
-
       .nav-content-wrapper .input {
         width: 80%;
       }
@@ -305,11 +273,314 @@ body {
     }
   }
 
-  @media (width < $xl) {
-    padding: 1rem 3.5rem;
-  }
+  .main-section {
+    display: grid;
+    grid-template-columns: max(19rem, 43.2vw) auto auto;
+    gap: 3.3vw;
+    position: relative;
+    z-index: 10;
 
-  @media (width < $lg) {
-    padding: 1rem;
+    .main-text {
+      margin-top: 4.9vw;
+
+      .main-text-heading-wrapper {
+        position: relative;
+
+        .main-text-heading {
+          margin: 0;
+          text-transform: uppercase;
+          font-size: max(2.5rem, 5.55vw);
+          line-height: max(2.65rem, 6.65vw);
+          font-weight: 600;
+          color: var(--secondary-color);
+
+          span {
+            display: block;
+          }
+        }
+
+        .decorative-chilli-img {
+          position: absolute;
+          top: max(3.3vw, 1.5rem);
+          right: max(6.1vw, 1rem);
+          width: max(12.2vw, 4rem);
+          transform: rotate(-22.66deg);
+        }
+      }
+
+      .main-text-desc {
+        color: var(--secondary-color);
+        opacity: 0.3;
+        font-size: max(0.7rem, 1.67vw);
+        line-height: max(0.9rem, 2vw);
+        font-weight: 300;
+        margin-top: 0.7vw;
+        margin-bottom: 4.45vw;
+      }
+
+      .add-to-cart-container {
+        --primary-padding: 0.35rem;
+        --secondary-padding: 1.3rem;
+
+        display: flex;
+        align-items: center;
+        gap: 3.9vw;
+
+        .add-to-cart-btn {
+          display: flex;
+          gap: 1.55vw;
+          align-items: center;
+          border: none;
+          background-color: var(--secondary-color);
+          color: var(--tertiary-color);
+          text-transform: uppercase;
+          border-radius: 10rem;
+          padding: var(--primary-padding) var(--secondary-padding)
+            var(--primary-padding) var(--primary-padding);
+          font-size: max(0.75rem, 1.33vw);
+          font-weight: 550;
+          cursor: pointer;
+          position: relative;
+          outline: 1px dashed transparent;
+          outline-offset: 1px;
+          transition: color 0.3s, transform 0.2s linear, outline 0.2s linear;
+
+          .shopping-cart-icon {
+            background-color: #ffd154;
+            width: max(2rem, 4.5vw);
+            height: max(2rem, 4.5vw);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+
+            img {
+              height: 50%;
+              width: 50%;
+              object-fit: contain;
+            }
+          }
+
+          span {
+            position: relative;
+          }
+
+          &:before {
+            content: "";
+            position: absolute;
+            width: max(2rem, 4.5vw);
+            height: max(2rem, 4.5vw);
+            background-color: #ffd154;
+            border-radius: 10rem;
+            transition: width 0.4s;
+          }
+
+          &:hover {
+            color: var(--secondary-color);
+
+            &:before {
+              width: calc(100% - (2 * var(--primary-padding)));
+            }
+          }
+
+          &:active {
+            transform: translateY(3px);
+            outline-color: var(--secondary-color);
+          }
+        }
+      }
+
+      .quantity-container {
+        display: flex;
+        align-items: center;
+        gap: 2.2vw;
+
+        .quantity-btn {
+          border: none;
+          width: max(2rem, 4.5vw);
+          height: max(2rem, 4.5vw);
+          border-radius: 50%;
+          background-color: var(--tertiary-color);
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+            rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+          cursor: pointer;
+          font-size: max(1rem, 2vw);
+          font-weight: 300;
+          outline: 1px dashed transparent;
+          outline-offset: 1px;
+          transition: opacity 0.4s, outline 0.2s linear;
+
+          &:hover {
+            opacity: 0.7;
+          }
+
+          &:active {
+            outline-color: var(--secondary-color);
+          }
+        }
+
+        .current-quantity-text {
+          width: max(2rem, 4.5vw);
+          height: max(2rem, 4.5vw);
+          background-color: var(--tertiary-color);
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: max(1rem, 2vw);
+          font-weight: 300;
+          outline: 1px solid #ffd154;
+          outline-offset: 0.6vw;
+        }
+      }
+    }
+
+    .product-img-wrapper {
+      margin-top: 1rem;
+      transform: rotate(-8.28deg);
+      position: relative;
+
+      .product-img {
+        width: 27.8vw;
+        object-fit: contain;
+        position: relative;
+      }
+
+      &:before {
+        content: "";
+        position: absolute;
+        width: 60%;
+        height: 90%;
+        left: 0;
+        right: 0;
+        bottom: 1rem;
+        margin-inline: auto;
+        box-shadow: 0px 10px 104px 33px rgba(0, 0, 0, 0.4);
+      }
+    }
+
+    .categories {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      gap: max(1.5rem, 2.75vw);
+      margin-top: 3rem;
+
+      .category {
+        display: flex;
+        align-items: center;
+        gap: 1.55vw;
+
+        .category-img-wrapper {
+          width: max(2.7rem, 5.6vw);
+          height: max(2.7rem, 5.6vw);
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+            rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+
+          img {
+            width: 65%;
+            height: 65%;
+            object-fit: contain;
+          }
+        }
+
+        span {
+          text-transform: uppercase;
+          font-size: max(0.85rem, 1.24vw);
+          font-weight: 500;
+        }
+
+        &.category-chilli .category-img-wrapper {
+          background-color: #206456;
+        }
+        &.category-corn .category-img-wrapper {
+          background-color: #d51037;
+        }
+        &.category-spices .category-img-wrapper {
+          background-color: #fdb339;
+        }
+      }
+    }
+
+    .chilli-picture-decorative {
+      position: absolute;
+      width: 18.9vw;
+      bottom: 1.1vw;
+      right: -8vw;
+      transform: rotate(-45deg);
+      filter: blur(1.5px);
+      z-index: -1;
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      width: 50vw;
+      height: 50vw;
+      background-image: url("./assets/images/plane-decorative.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      top: -12.8vw;
+      left: 50%;
+      transform: translateX(-64%);
+      z-index: -1;
+    }
+
+    @media (width < $md) {
+      grid-template-columns: max(19rem, 43.2vw) auto;
+
+      .product-img-wrapper {
+        display: none;
+      }
+
+      .categories .category {
+        &:nth-child(2) {
+          justify-content: center;
+        }
+        &:nth-child(3) {
+          justify-content: end;
+        }
+      }
+
+      &::before {
+        display: none;
+      }
+    }
+
+    @media (width < $sm) {
+      grid-template-columns: auto;
+      flex-grow: 1;
+      align-items: center;
+
+      .main-text {
+        .main-text-heading-wrapper .main-text-heading {
+          text-align: center;
+        }
+
+        .main-text-desc {
+          text-align: center;
+          margin-top: 1rem;
+          margin-bottom: 2rem;
+        }
+
+        .add-to-cart-container {
+          justify-content: center;
+        }
+      }
+
+      .categories {
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 0;
+      }
+    }
   }
 }
