fix(landing-page: margin-bottom added to main section)

--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -237,6 +237,7 @@ body {
   gap: 3.3vw;
   position: relative;
   z-index: 10;
+  margin-bottom: 3rem;
 }
 .main .main-section .main-text {
   margin-top: 4.9vw;
@@ -482,6 +483,7 @@ body {
     grid-template-columns: auto;
     flex-grow: 1;
     align-items: center;
+    margin-bottom: 0;
   }
   .main .main-section .main-text .main-text-heading-wrapper .main-text-heading {
     text-align: center;
