--- a/cards/style.css
+++ b/cards/style.css
@@ -34,6 +34,7 @@ body .card {
   padding: 1.5rem 1.5rem 0 1.5rem;
   border-radius: 2rem;
   cursor: pointer;
+  overflow: hidden;
   position: relative;
   transition: all 0.3s;
 }
