--- a/cards/style.scss
+++ b/cards/style.scss
@@ -40,6 +40,7 @@ body {
     padding: 1.5rem 1.5rem 0 1.5rem;
     border-radius: 2rem;
     cursor: pointer;
+    overflow: hidden;
     position: relative;
     transition: all 0.3s;
 
