--- a/cards/style.css
+++ b/cards/style.css
@@ -31,8 +31,8 @@ body {
 body .card {
   display: flex;
   flex-direction: column;
-  padding: 1.5rem 1.5rem 0 1.5rem;
-  border-radius: 2rem;
+  padding: max(1.6vw, 1rem) max(1.6vw, 1rem) 0 max(1.6vw, 1rem);
+  border-radius: 2vw;
   cursor: pointer;
   overflow: hidden;
   position: relative;
@@ -45,10 +45,11 @@ body .card .header {
 }
 body .card .header .header-text .text-main {
   display: block;
+  font-size: max(1.15vw, 0.5rem);
 }
 body .card .header .header-text .text-sub {
   display: block;
-  font-size: 0.65rem;
+  font-size: 0.7vw;
   margin-top: 0.1rem;
   color: #606060;
 }
@@ -56,8 +57,8 @@ body .card .header .header-icon-btn {
   border: none;
   padding: 0;
   background-color: #a6a6a6;
-  width: 2rem;
-  height: 2rem;
+  width: 2.1vw;
+  height: 2.1vw;
   border-radius: 50%;
   outline: 1px dashed transparent;
   cursor: pointer;
@@ -79,7 +80,7 @@ body .card .header .header-icon-btn:before {
 }
 body .card .header .header-icon-btn i {
   position: relative;
-  font-size: 0.9rem;
+  font-size: 1vw;
   transition: color 0.3s;
 }
 body .card .header .header-icon-btn:hover:before {
@@ -95,7 +96,7 @@ body .card .header .header-icon-btn:active {
 body .card .avatar-img {
   align-self: center;
   flex-grow: 1;
-  width: 15rem;
+  width: 16vw;
 }
 body .card:before {
   content: "";
@@ -105,7 +106,7 @@ body .card:before {
   background-color: #000;
   left: 0;
   top: 0;
-  border-radius: 2rem;
+  border-radius: 2vw;
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
